# wizlights-mcp-server

./: .pre-commit-config.yaml  LICENSE  README.md  hello.py  pyproject.toml
.github/: dependabot.yml
src/: server.py
src/common/: bulbs.py
src/models/: state.py
src/resources/: bulbs.py  scenes.py
src/tools/: bulbs.py
wizlights_mcp_server/: __main__.py  server.py
wizlights_mcp_server/common/: validators.py
wizlights_mcp_server/resources/: bulbs.py
wizlights_mcp_server/tools/: bulbs.py
